# nyc-doris-captions-cli

./: .env.example  .gitignore  MANIFEST.in  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  preservica.config.example.json  pyproject.toml  seed.example.yml  tailwind.config.ts  tsconfig.json
RFCs/: RFP-NYC-Accessible-Transcripts-and-Search-CLI-2025-10-19.md  RFP_Accessible-Transcription-and-Search_for_NYC_Municipal_Archives_Preservica_Assets_v1.0.md  RFP_Civic-Transcripts_for_NYC_Municipal_Archives_v1.0.md  RFP_NYC-DORIS_Local-ASR-Captions-and-Search_v1.0.md  RFP_OpenSource_Local_Transcription_and_Search_for_NYC_AV_Collections_v1.0.md
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/api/download/: route.ts
app/api/report/: route.ts
app/browse/: page.tsx
app/collections/: page.tsx
app/items/[id]/: page.tsx
app/report/: page.tsx
app/search/: page.tsx
components/: database-error-notice.tsx  media-badge.tsx  search-filters.tsx  search-form.tsx  search-results.tsx
docs/rfcs/: RFC-0001-candle-cli.md  RFC-0001-civic-captions-nycma-preservica-cli.md  RFC-0001-nycma-preservica-asr-index.md
lib/: db.ts  format.ts  pdfParseWrapper.ts  queries.ts
lib/preservica/: client.ts  html-scraper.ts  normalize.ts  types.ts
public/: README
scripts/: fetch-preservica.ts  harvest-preservica.ts  ingest.ts  transcribe-remote.ts
seeds/: nycma-sample.txt
tests/: db.test.ts  harvest.test.ts  ingest.test.ts
tests/e2e/: smoke.spec.ts
tests/fixtures/: preservica-sample.html
types/: item.ts
(+3 files in other folders)
